2002-06-12  Stipe Tolj <tolj@wapme-systems.de>
    * gw/smsbox.c: fixing inline comments to fit CodingStyle rules

2002-06-11  Bruno Rodrigues  <bruno.rodrigues@litux.org>
    * aclocal.m4: fix date function, for days lesser than 10
    * configure.in: defaults to native malloc but still with assertions
    * configure.in, Makefile.in: use pdfjadetex to convert from 
      xml->tex->pdf instead of xml->tex->ps->pdf
    * debian/*: some fixes
    * gw/ota_prov_attr.h: Added MMSURL comments
    * gw/smsbox.c: removed <!doctype...> from xml-post; fix setting 
      msg->sms.service on MO messages
    * gw/smsc_emi2.c: removed NACK code. It didn't work either way.
    * gwlib/conn.c, gwlib/conn.h, gwlib/http.c: Reenabled HTTP Keepalive
      and added extra debug: http connections now print the fd used, so
      we can try to find the bug. It looks like a reused connection that 
      didn't timeout. 

2002-06-11  Stipe Tolj <tolj@wapme-systems.de>
    * gwlib/thread.[ch], gwlib/conn.c: applied Oded's patch to make gcc 3.x 
      not complain about it's __FUNC__ macros.
      [Msg-ID: <2CFC21DAF860CC49AF57333C4459DD4B296D8D@exchange.m-wise.com>]

2002-06-03  Stipe Tolj <tolj@wapme-systems.de>
    * gw/smsc_smpp.c: fixed memory bug in msg_to_pdu(), patch by Oded
      [Msg-ID: <2CFC21DAF860CC49AF57333C4459DD4B296D6F@exchange.m-wise.com>]

2002-06-02  Stipe Tolj <tolj@wapme-systems.de>
    * gw/smsbox.c: memory leak fixes, provided by Angel
      [Msg-ID: <NCEOLLKPFAEAOBBMHNHECEFGCGAA.afradejas@mediafusion.es>]

2002-06-02  Stipe Tolj <tolj@wapme-systems.de>
    * wap/wsp_strings.def: added required MIME types for the content type 
      assignment table 40. Thanks to Paul for indicating this.

2002-05-30  Stipe Tolj <tolj@wapme-systems.de>
    * aclocal.m4, configure[.in]: fixed Bruno's date extraction using 'cut'
      and defined it as external function in aclocal.m4.
 
2002-05-30  Stipe Tolj <tolj@wapme-systems.de>