@@ -18,6 +18,7 @@ else
 fi
 
 find $dirs -type f ! -name '*.[oa]' ! -name '.*' ! -name '*.ps' ! \
+	-name '*.html' ! -name '*.pdf' ! -name '*.rtf' ! \
 	-name '*.png' ! -name core ! -name configure ! -name config.status \
 	! -name '*.log' ! -name '*.fig' |
 grep -v '/CVS/' |
